--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug --watch",
-    "start:dist": "node dist/main.js",
+    "start:dist": "node dist/src/main.js",
+    "postinstall": "npm run prestart:prod",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
